@@ -9,6 +9,8 @@ NOT BE PRESENT IN THE STABLE BRANCH
 For details of when a commit makes it into the stable branch see the ReleaseNotes file.
 
 2016-06-24 DariusIII
+	Chg: Remove release searchname from Gamma profile page (comments part)
+	Upd: Reformat getCommentsRange query in ReleaseComments class
 	Fix: Forums on Gamma (fixes issue #2174), Charisma, Gentele and Omicron themes.
 	Fix: Triggers in schema as pointed out in issue #2184 (fixes issue #2184)
 	Chg: Move child forking settings inside if else loop
